# numeric-python

./: .editorconfig  .gitpod.yml  COPYING.md  Dockerfile  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
doc/: api.rst  conf.py  index.rst
notebooks/: demo.ipynb
tests/: test_numeric.py
